--- a/exercise/ajax/fetch/index.html
+++ b/exercise/ajax/fetch/index.html
@@ -50,7 +50,10 @@
                     password: '12345678'
                 })
             }).then((response) => {
-                return response.json
+                return response.text()
+            }).then((data) => {
+                console.log(data)
+                return data
             }).catch((error) => {
                 throw error
             })
